--- a/app/assets/stylesheets/deployd/application.css
+++ b/app/assets/stylesheets/deployd/application.css
@@ -8,6 +8,12 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+ *= require deployd/bootstrap
+ *= require deployd/bootstrap-responsive
  *= require_self
  *= require_tree .
  */
+
+body {
+  padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+}
