--- a/app/views/deployd/deploys/index.html.erb
+++ b/app/views/deployd/deploys/index.html.erb
@@ -5,28 +5,18 @@
     <tr>
       <th>#</th>
       <th>When</th>
-      <th>SHA</th>
+      <th>Revision</th>
       <th> </th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>1</td>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td><a class="btn btn-small btn-info" href="#"><i class="icon-info-sign icon-white"></i> Details</a></td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td><a class="btn btn-small btn-info" href="#"><i class="icon-info-sign icon-white"></i> Details</a></td>
-    </tr>
-    <tr>
-      <td>3</td>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td><a class="btn btn-small btn-info" href="#"><i class="icon-info-sign icon-white"></i> Details</a></td>
-    </tr>
+    <% @deploys.each_with_index do |deploy, index| %>
+      <tr>
+        <td><%= index + 1 %></td>
+        <td><%=l deploy.time, :format => :long %></td>
+        <td><%= deploy.revision %></td>
+        <td><a class="btn btn-small btn-info" href="#"><i class="icon-info-sign icon-white"></i> Details</a></td>
+      </tr>
+    <% end %>
   </tbody>
 </table>
