--- a/app/assets/stylesheets/deployd/application.css
+++ b/app/assets/stylesheets/deployd/application.css
@@ -17,3 +17,7 @@
 body {
   padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
 }
+
+td.functions {
+  text-align: right;
+}
