--- a/app/views/deployd/deploys/index.html.erb
+++ b/app/views/deployd/deploys/index.html.erb
@@ -14,8 +14,14 @@
       <tr>
         <td><%= index + 1 %></td>
         <td><%=l deploy.time, :format => :long %></td>
-        <td><%= deploy.revision %></td>
-        <td><a class="btn btn-small btn-info" href="#"><i class="icon-info-sign icon-white"></i> Details</a></td>
+        <td><%= link_to deploy.revision, deploy.revision_url, :target => :blank %></td>
+        <td class="functions">
+          <% if index < @deploys.length - 1 %>
+            <a class="btn btn-small btn-info" href="#"><i class="icon-info-sign icon-white"></i> Details</a>
+          <% else %>
+            <a class="btn btn-small disabled" href="#"><i class="icon-info-sign icon-white"></i> Details</a>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
