--- a/app/views/layouts/deployd/application.html.erb
+++ b/app/views/layouts/deployd/application.html.erb
@@ -21,18 +21,18 @@
         <span class="icon-bar"></span>
       </a>
       <a class="brand" href="#">deployd</a>
-      <div class="nav-collapse">
-        <ul class="nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </div><!--/.nav-collapse -->
     </div>
   </div>
 </div>
 
 <div class="container">
+  <% flash.each do |name, msg| %>
+    <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
+      <a class="close" data-dismiss="alert">&#215;</a>
+      <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
+    </div>
+  <% end %>
+
   <%= yield %>
 </div> <!-- /container -->
 
