--- a/app/assets/stylesheets/deployd/bootstrap-responsive.css
+++ b/app/assets/stylesheets/deployd/bootstrap-responsive.css
@@ -24,9 +24,9 @@
 
 .hide-text {
   font: 0/0 a;
-  color: transparent;
+  color: rgba(255,255,255,0);
   text-shadow: none;
-  background-color: transparent;
+  background-color: rgba(255,255,255,0);
   border: 0;
 }
 
@@ -762,7 +762,7 @@
     max-width: none;
     padding: 0;
     margin: 0 15px;
-    background-color: transparent;
+    background-color: rgba(255,255,255,0);
     border: none;
     -webkit-border-radius: 0;
        -moz-border-radius: 0;
